--- a/client/src/Pages/css/specificClient.css
+++ b/client/src/Pages/css/specificClient.css
@@ -74,7 +74,6 @@
 
 .clientGrid div {
     background-color: white;
-    overflow: scroll;
 }
 
 .clientGrid a:hover {
